tests/whiley/valid/test_1628.wyal
type storeCode is (int x)
where:
    (0 <= x) && (x <= 5)


type STORE is ({int index, storeCode op} self)


assert "type invariant not satisfied":
    if:
        true
    then:
        {index: 1, op: 0} is STORE


